fix footer on mobile

--- a/src/js/components/footer/footer.css
+++ b/src/js/components/footer/footer.css
@@ -2,9 +2,9 @@ p{
   color: white;
   font-weight: lighter;
   text-align: center;
-  line-height: 5px;
+  margin: 10px 0 0 0;
 }
 
 footer{
-  margin: 40px;
+  margin: 40px 0 40px 0;
 }
